<resources>
    <string name="app_name" translatable="false">Discusim</string>

    <!-- Common Messages. Start -->
    <string name="msg_refresh">Refresh</string>
    <string name="msg_share">Share</string>
    <string name="msg_empty_data">Empty data</string>

    <string name="msg_follow">Follow</string>
    <string name="msg_following">Following</string>

    <string name="symbol_bullet" translatable="false">\u2022</string>

    <!-- Time. Start -->
    <plurals name="time_seconds">
        <item quantity="one">%d second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>

    <plurals name="time_minutes">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>

    <plurals name="time_hours">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <plurals name="time_days">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <!-- Time. End -->

    <!-- Common Messages. End -->

    <!-- Common Errors -->
    <string name="error_bad_request">400 Bad Request</string>
    <string name="error_server">500 Server Error</string>
    <string name="error_network">Network error</string>
    <string name="error_unknown">Unknown error</string>

    <!-- Auth -->
    <string name="auth_title">Authorization</string>

    <!-- Main Host -->
    <string name="main_host_my_activity">Activity</string>
    <string name="main_host_my_forums">Forums</string>
    <string name="main_host_my_profile">Profile</string>

    <!-- My Activity -->
    <string name="my_activity_title">Activity</string>

    <!-- My Forums -->
    <string name="my_forums_title">Forums</string>

    <!-- My Profile -->
    <string name="my_profile_title">Profile</string>
    <string name="my_profile_sign_out">Sign out</string>
    <string name="my_profile_about_app">About</string>

    <!-- Forum Host -->
    <string name="forum_host_details_tab">Details</string>
    <string name="forum_host_discussions_tab">Discussions</string>
    <string name="forum_host_moderators_tab">Mods</string>

    <!-- Channel Host -->
    <string name="channel_host_details">Details</string>
    <string name="channel_host_discussions">Discussions</string>

    <!-- Channel Details Host -->
    <string name="channel_details_host_details_tab">Details</string>
    <string name="channel_details_host_topics_tab">Topics</string>
    <string name="channel_details_host_moderators_tab">Mods</string>

    <!-- Channel Details -->
    <string name="channel_details_thousand_nums">%,d</string>
    <string name="channel_details_discussions">Discussions</string>
    <string name="channel_details_followers">Followers</string>

    <!-- Channel Discussions Host -->
    <string name="channel_discussions_host_latest">Latest</string>
    <string name="channel_discussions_host_hot">Hot</string>
    <string name="channel_discussions_host_popular">Popular</string>

    <!-- Discussion Details -->
    <string name="discussion_details_username">\@%s</string>

    <!-- User Host -->
    <string name="user_host_details_tab">Details</string>
    <string name="user_host_activity_tab">Activity</string>
    <string name="user_host_comments_tab">Comments</string>
    <string name="user_host_forums_tab">Forums</string>
    <string name="user_host_followers_tab">Followers</string>
    <string name="user_host_following_tab">Following</string>

    <!-- User Details -->
    <string name="user_details_username">\@%s</string>
    <string name="user_details_num_upvotes">&lt;b>%d&lt;/b> Upvotes</string>
    <string name="user_details_joined_date">Joined %s</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_app_description">Unofficial Disqus client</string>
    <string name="about_app_version">Version %s (build %d)</string>
    <string name="about_write_feedback">Write feedback</string>
    <string name="about_rate_app">Rate the app</string>
    <string name="about_share_app">Share the app</string>
    <string name="about_libraries">Open Source Libraries</string>
    <string name="about_privacy_policy">Privacy policy</string>

    <!-- App Libraries -->
    <string name="app_libraries_title">Open Source Libraries</string>

    <!-- List Items. Start -->

    <!-- Item User Activity -->
    <string name="item_user_activity_upvoted_discussion">upvoted discussion %s</string>
    <string name="item_user_activity_commented_discussion">commented on discussion %s</string>
    <string name="item_user_activity_replied_discussion">replied on discussion %s</string>

    <!-- List Items. End -->

</resources>
